--- a/src/app/todos/todos.component.html
+++ b/src/app/todos/todos.component.html
@@ -1,2 +1,7 @@
-<app-todo *ngFor="let todo of todos" [todo]="todo" class="list-group">
+<div class="container mt-5">
+    <app-add-todo (addTodo)="addTodo($event)"></app-add-todo>
+<ul class="list-group">
+<app-todo *ngFor="let todo of todos"  (deleteTodo)="deleteTodo($event)" [todo]="todo" >
 </app-todo>
+</ul>
+</div>
