--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,6 +20,7 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/todos" routerLinkActive="active">Todos</a>
       </li>
+      <li class="nav-item"><a routerLink="/completed" routerLinkActive="active" class="nav-link">Completed</a></li>
     </ul>
   </div>
 </nav>
